# HybridGuard

./: .gitignore  LICENSE  README.md  pyproject.toml
dashboard/: Launch Dashboard.bat  Launch Dashboard.command  README.md  dashboard.py  requirements.txt
dashboard/assets/: style.css
dashboard/figures/: fig_ablation.py  fig_calibration.py  fig_robustness.py  fig_roc_curves.py  fig_sanitization.py  generate_all_figures.py
dashboard/utils/: __init__.py  load_results.py  synthetic_data.py
demo/: README.md  app.py  requirements.txt
notebooks/: HybridGuard_Colab_Orchestrator.ipynb  HybridGuard_CrossCorpus_Eval.ipynb  HybridGuard_FULL.ipynb  HybridGuard_LLM_Judge_Baseline.ipynb  HybridGuard_RevisionAddons.ipynb  HybridGuard_WS1_Universal_Eval.ipynb
scripts/: evaluate_canonical_recovery.py  make_architecture_figure.py  make_llm_judge_figure.py  make_paper_figures.py  make_ws1_universal_figure.py  pack_overleaf.sh
src/hybridguard/: __init__.py  canonicalize.py  cli.py
tests/: test_canonicalize.py
